--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSdDWJnP4bFM5ypZ4kAcLPzxIHhiVpjLKsTkLN3e4sbsfbzcww/viewform?usp=dialog"
                         target="_blank"
                         >Submit Record</a
                     >
