--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         class="nav__cta type-label-lg"
                         href="https://docs.google.com/forms/d/e/1FAIpQLSdDWJnP4bFM5ypZ4kAcLPzxIHhiVpjLKsTkLN3e4sbsfbzcww/viewform?usp=dialog"
                         target="_blank"
-                        >Submit Record and Add a Level</a
+                        >Submit Record or Add Level</a
                     >
                 </div>
             </nav>
