--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                     <a class="nav__icon" href="https://discord.gg/QSa35u6znj">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
+                    <!-- Login Button-->
+                    <router-link class="nav__cta type-label-lg" to="/login">Login</router-link>
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
