--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <!-- Login Button-->
-                    <router-link class="nav__cta type-label-lg" to="/login">Login</router-link>
+                    <a class="nav__cta type-label-lg" href="https://discord.com/oauth2/authorize?client_id=1461436808536526965&response_type=code&redirect_uri=https%3A%2F%2Fcommunitydemonlist.com%2F%23%2Flogin&scope=identify+guilds">Login</a>
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
